--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .idea
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
